@@ -1,4 +1,6 @@
 ver 0.21.8 (not yet released)
+* input
+  - smbclient: download to buffer instead of throttling transfer
 * output
   - httpd: add missing mutex lock
   - httpd: fix use-after-free bug
